# TouchDictionary

./: .gitignore  README.md
touchdictionary/: TECHNICAL_DEBT.md  development_session.md  development_session_2024_11_12.md
touchdictionary/cli/: Cargo.toml
touchdictionary/cli/src/: main.rs
touchdictionary/core/: Cargo.toml
touchdictionary/core/src/: cli.rs  clipboard.rs  lib.rs  lookup.rs
touchdictionary/gui/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
touchdictionary/gui/src/: App.css  App.tsx  lib.rs  main.rs  main.tsx
touchdictionary/gui/src/styles/: index.css
