[package]
name = "touchdictionary-gui"
version = "0.1.0"
description = "GUI for TouchDictionary"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
touchdictionary-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-opener = "2"

[lib]
name = "touchdictionary_gui_lib"
path = "src/lib.rs"

[[bin]]
name = "touchdictionary-gui"
path = "src/main.rs"
